--- a/8-TPs/08-PiedarPapelTijera2.html
+++ b/8-TPs/08-PiedarPapelTijera2.html
@@ -39,9 +39,11 @@
   		<form class=" animated bounceInLeft FormIngreso">
 	   <h1>Piedra, papel o tijera 2.0</h1>
 	 			
-
+			<label>Ganados:</label>
 			<input type="text" readonly id="txtIdGanadas" placeholder="Juegos ganados">
+			<label>Perdidos:</label>
 			<input type="text" readonly id="txtIdPerdidas" placeholder="Juegos perdidos">
+			<label>Empatados:</label>
 			<input type="text" readonly id="txtIdEmpatadas" placeholder="Juegos empatados" >
 			<img class="PiedraPapelTijera animated zoomInRight " src="imagenes/piedra.jpg" onclick="piedra()">
 			<img class="PiedraPapelTijera animated zoomInUp" src="imagenes/papel.jpg" onclick="papel()">
